# MiniProject

client/: index.html  package-lock.json  package.json
client/src/: main.jsx
client/src/admin/: AdminSignIn.jsx
client/src/auth/: Auth.jsx
client/src/components/: About.jsx  Contact.jsx  Footer.jsx  Home.jsx  Navbar.jsx
client/src/css/: googleTranslator.css
client/src/farmer/: Dashboard.jsx  DiseaseDetection.jsx  FarmerSignIn.jsx  FarmerSignUp.jsx  IoTDevice.jsx
client/src/routes/: App.jsx
client/src/technician/: TechnicianSignIn.jsx  TechnicianSignUp.jsx
client/src/utils/: Loader.jsx  appStore.jsx  findLocationData.jsx  iotDataSlice.jsx  roleSlice.jsx  userSlice.jsx
iot/: package-lock.json  sample.js  sensor_data.txt  test.cpp
pythonServer/: .env.example  .gitignore  main.py  pyproject.toml
pythonServer/app/: __init__.py  home_routes.py
pythonServer/app/routes/: __init__.py  api_routes.py  rag_routes.py  tag_routes.py
pythonServer/app/utils/: embedding_utils.py  embeddings.py  gemini_utils.py  qdrant_utils.py
server/: .env  index.js  package-lock.json  package.json
server/controllers/: admin.js  farmer.js  iot.js
server/db/: db.js
server/middlewares/: authMiddleware.js
server/models/: admin.js  farmer.js
server/routes/: admin.js  farmer.js  iot.js
