[project]
name = "pythonserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "google-genai>=1.45.0",
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "tensorflow>=2.20.0",
]
