[project]
name = "pythonserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "google-genai>=1.45.0",
    "langchain-huggingface>=1.0.0",
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "sentence-transformers>=5.1.1",
    "tensorflow>=2.20.0",
    "tf-keras>=2.20.1",
    "torch>=2.9.0",
]
